# Poisker

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_locations_hierarchy.py  0003_categories_scope.py  0004_chats_owner_interested_read.py  0005_email_verified_at.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/integrations/: __init__.py  mail.py  redis.py  typesense.py
backend/app/modules/: __init__.py
backend/app/modules/auth/: __init__.py  deps.py  email_auth.py  email_codes.py  routes.py  schemas.py  service.py  tokens.py
backend/app/modules/categories/: __init__.py  models.py  routes.py  schemas.py
backend/app/modules/chats/: __init__.py  models.py  routes.py  schemas.py
backend/app/modules/favorites/: __init__.py  models.py  routes.py  schemas.py
backend/app/modules/listings/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/app/modules/locations/: __init__.py  models.py  routes.py  schemas.py
backend/app/scripts/: reindex_typesense.py  seed_categories.py  seed_dev.py  seed_locations.py
backend/app/storage/: __init__.py  base.py  local.py  service.py
backend/tests/: conftest.py  fake_async_redis.py  test_email_codes.py  test_health.py
frontend/: .env.example  README.md  (+1 more)
(+57 files in other folders)
