[project]
name = "poisker-backend"
version = "0.1.0"
description = "Poisker backend (FastAPI, async SQLAlchemy, Postgres, Redis, Typesense)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "SQLAlchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "python-multipart>=0.0.9",
  "redis>=5.0.4",
  "typesense>=0.21.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "structlog>=24.2.0",
  "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
